@@ -10250,6 +10250,11 @@ sign.alias=pvktmp:3852567a-45er-567y-w456-23456789sdft</programlisting>Sign
         </listitem>
 
         <listitem>
+          <para>Fix bug with font size for artifact and gateways: now the font
+          size is respecting system settings</para>
+        </listitem>
+
+        <listitem>
           <para>Improved rebranding process (ability to specify
           app.name/project.name/brandingdir parameters using configuration
           script). Now also possible to do re-branding on Linux.</para>
