@@ -1,4 +1,7 @@
 ###### TWE 5.1-1 RELEASED ######
+2013-11-19 Sasa Bojanic <sasaboy@together.at>
+   # Fix bug with font size for artifact and gateways: now the font size is respecting system settings
+
 2013-11-04 Sasa Bojanic <sasaboy@together.at>
    # Added possibility to configure the content and order of application's title text with 7 possible placeholders
      Documentation updated to describe new configuration entry (TitleString entry in togwecontroller.properties).
